@@ -609,8 +609,6 @@ static qboolean PR_FinishCompilation (void)
 	return !errors;
 }
 
-//=============================================================================
-
 /*
 ============
 PR_WriteProgdefs
@@ -735,9 +733,6 @@ static void PrintFunction (const char *name)
 		ds++;
 	}
 }
-
-
-//============================================================================
 
 /*
 ============
